<resources>
    <string name="app_name">SIT_HUB_ADMINISTRATOR</string>
    <string name="Upload_Feed">Upload Feed</string>
    <string name="Upload_Image_To_Gallery">Add Pictures</string>
    <string name="Upload_Ebook">Add Ebook</string>
    <string name="Remove_Feed">Remove Feed</string>
    <string name="Edit_Faculty">Edit Faculty</string>
    <string name="Select_Image">Select Image</string>
    <string name="Feed_Title">Feed Title</string>
    <string name="Upload_Feed_Button_Text">Upload Feed</string>
    <string name="Upload_Gallery_Image_Button_Text">Upload Image</string>
    <!--    <string name="Dropdown_Hint">Select category</string>-->
    <string name="Select_Ebook">Select Ebook</string>
    <string name="Ebook_Title">Ebook title</string>
    <string name="Upload_Ebook_Button_Text">Upload Ebook</string>
    <string name="No_File_Selected">No file selected</string>
    <string name="Name">Name</string>
    <string name="Upload_Teacher_Button_Text">Add Faculty</string>
    <string name="Email">Email</string>
    <string name="Post">Post</string>
    <string name="No_Record_Available">No record available</string>
    <string name="Update_Info">Update info</string>
    <string name="Information_Science_engineering">Information Science &amp; Engineering</string>
    <string name="Computer_Science_And_Engineering">Computer Science &amp; Engineering</string>
    <string name="Mechanical_Engineering">Mechanical Engineering</string>
    <string name="Electronics_And_Communication_Engineering">Electronics &amp; Communication Engineering</string>
    <string name="Telecommunication_Engineering">Telecommunication engineering</string>
    <string name="Electronics_And_Instrumentation_Engineering">Electronics &amp; Instrumentation Engineering</string>
    <string name="Mathematics">Mathematics</string>
    <string name="Physics">Physics</string>
    <string name="Chemical_Engineering">Chemical Engineering</string>
    <string name="Chemistry">Chemistry</string>
    <string name="Biotechnology">Biotechnology</string>
    <string name="MBA">Master of Business Administration</string>
    <string name="Architecture">Architecture</string>
    <string name="Administration_And_Non_Teaching">Administration &amp; Non-Teaching</string>
    <string name="Instrumentation_Engineering">Instrumentation Engineering</string>
    <string name="Industrial_Engineering_And_Management">Industrial Engineering &amp; Management</string>
    <string name="Update">Update</string>
    <string name="Delete_Faculty">Delete Faculty</string>
    <string name="Namma_SIT">NAMMA SIT</string>
    <string name="Delete">Delete</string>
    <string name="Title_Will_Load_Here">Title will load here!</string>
    <string name="Artificial_Intelligence_and_Data_Science">Artificial Intelligence and Data Science</string>
    <string name="OTP_Instruction">You will receive a One Time Password(OTP) on below number(Click "Get Otp"):</string>
    <string name="Verify_OTP"><u>Verify Otp</u></string>
    <string name="OTP">OTP</string>
    <string name="Resend_OTP"><u>Resend OTP</u></string>
    <string name="Counter_Hint">Counter</string>
    <string name="collegeName">Siddaganga Institute of Technology</string>
    <string name="collegeSplashText">An Autonomous Institute, Affiliated to VTU Belagavi, Approved by AICTE</string>
    <string name="collegeAddress">B.H. Road, Tumkur 572 103, Karnataka, India</string>
    <string name="Get_OTP">Get OTP</string>
    <string name="date">Date</string>
    <string name="username_comes_here">userName comes here</string>
    <string name="club_type">Club Type</string>
</resources>