<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userAuthentication.OtpActivity">


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

    <ImageView
        android:id="@+id/sitLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sit_logo"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/otpAndOtherContainer"
        android:layout_below="@+id/sitLogo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/red2"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/OTP_Instruction"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/phoneNumberDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Phone no. not found"
            android:textColor="@color/red2"
            android:textSize="15sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/otpField"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="33dp"
            android:inputType="number"
            android:hint="@string/OTP" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resendOTP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                android:gravity="center"
                android:text="@string/Resend_OTP"
                android:textColor="#000000"
                android:textStyle="bold" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:id="@+id/getOtp"
                android:text="@string/Get_OTP"
                android:textAllCaps="false"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/countdownTimer"
                android:textColor="#000000"
                android:hint="@string/Counter_Hint"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"/>


        </LinearLayout>



    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verifyBtn"
        android:layout_below="@+id/otpAndOtherContainer"
        android:textAllCaps="false"
        android:text="@string/Verify_OTP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>


</RelativeLayout>

