<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".UploadEbookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            android:layout_gravity="center"
            android:id="@+id/uploadEbookCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"

                    android:background="@drawable/circular_upload_ebook_touch_to_upload"
                    android:src="@drawable/ic_upload_ebook"
                    android:padding="15dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrey"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Select_Ebook"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/textColour"/>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_File_Selected"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:id="@+id/selectedFileName"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ebookTitleField"
                android:hint="@string/Ebook_Title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Upload_Ebook_Button_Text"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:id="@+id/uploadEbookButton"/>


    </LinearLayout>

</ScrollView>