<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faculty_list.AddFaculty">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:id="@+id/teacherCircleImageClickToAddImg"
             android:src="@drawable/user"
             android:layout_gravity="center"
             android:layout_marginTop="36dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/teacherNameField"
                android:inputType="text"
                android:hint="@string/Name" />
        </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/teacherEmailField"
                android:inputType="textEmailAddress"
                android:hint="@string/Email" />
        </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/teacherPostField"
                android:inputType="text"
                android:hint="@string/Post" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/facultyDepartmentSpinner"
            android:spinnerMode="dropdown"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center"
            android:layout_marginVertical="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Upload_Teacher_Button_Text"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:id="@+id/uploadTeacherButton"/>

    </LinearLayout>


</ScrollView>