<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faculty_list.UpdateFaculty">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/floatingAB"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_sign"
        android:elevation="10dp"
        app:fabSize="normal"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Computer_Science_And_Engineering"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColour"
                android:textStyle="bold"
                android:layout_marginTop="18dp"/>

<!--           Using simply a view to show a line below dept. name-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#c1c1c1"/>


            <!--                Disable scrolling here cause already using nested scroll view and scrolling is not required here-->
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/CSEFacultyRecycler"
                android:nestedScrollingEnabled="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/CSEfacultyDataNotFound">

                <include layout="@layout/no_data_available_card"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Information_Science_engineering"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColour"
                android:textStyle="bold"
                android:layout_marginTop="18dp"/>

<!--           Using simply a view to show a line below dept. name-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#c1c1c1"/>


            <!--                Disable scrolling here cause already using nested scroll view and scrolling is not required here-->
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/ISEFacultyRecycler"
                android:nestedScrollingEnabled="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ISEfacultyDataNotFound">

                <include layout="@layout/no_data_available_card"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mechanical_Engineering"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColour"
                android:textStyle="bold"
                android:layout_marginTop="18dp"/>

<!--           Using simply a view to show a line below dept. name-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#c1c1c1"/>


            <!--                Disable scrolling here cause already using nested scroll view and scrolling is not required here-->
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/MEFacultyRecycler"
                android:nestedScrollingEnabled="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/MEfacultyDataNotFound">

                <include layout="@layout/no_data_available_card"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Electronics_And_Communication_Engineering"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColour"
                android:textStyle="bold"
                android:layout_marginTop="18dp"/>

            <!--           Using simply a view to show a line below dept. name-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#c1c1c1"/>


            <!--                Disable scrolling here cause already using nested scroll view and scrolling is not required here-->
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/ECEFacultyRecycler"
                android:nestedScrollingEnabled="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ECEfacultyDataNotFound">

                <include layout="@layout/no_data_available_card"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Telecommunication_Engineering"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/textColour"
                android:textStyle="bold"
                android:layout_marginTop="18dp"/>

            <!--           Using simply a view to show a line below dept. name-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="#c1c1c1"/>


            <!--                Disable scrolling here cause already using nested scroll view and scrolling is not required here-->
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/TEFacultyRecycler"
                android:nestedScrollingEnabled="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/TEfacultyDataNotFound">

                <include layout="@layout/no_data_available_card"/>

            </LinearLayout>




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>