<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="5dp">
        
        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            android:id="@+id/addFeedCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circular_upload_notice_icon_background"
                    android:padding="15dp"
                    android:src="@drawable/ic_notice_upload" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/Upload_Feed"
                    android:textColor="@color/textColour"
                    android:textStyle="bold" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            android:id="@+id/addGalleryImageCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

               <ImageView
                   android:layout_width="64dp"
                   android:layout_height="64dp"
                   android:background="@drawable/circular_upload_image_icon_background"
                   android:src="@drawable/ic_upload_photo_to_gallery"
                   android:padding="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightGrey"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Upload_Image_To_Gallery"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textColour"/>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="5dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            android:id="@+id/addEbookCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

               <ImageView
                   android:layout_width="64dp"
                   android:layout_height="64dp"
                   android:background="@drawable/circular_upload_ebook_icon_background"
                   android:src="@drawable/ic_upload_ebook"
                   android:padding="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightGrey"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Upload_Ebook"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textColour"/>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            android:id="@+id/editFacultyDetailsCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

               <ImageView
                   android:layout_width="64dp"
                   android:layout_height="64dp"
                   android:background="@drawable/circular_update_faculty_list_icon_background"
                   android:src="@drawable/ic_edit_faculty"
                   android:padding="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightGrey"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Edit_Faculty"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textColour"/>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="5dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            android:id="@+id/deleteFeedCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

               <ImageView
                   android:layout_width="64dp"
                   android:layout_height="64dp"
                   android:background="@drawable/circular_delete_notice_icon_background"
                   android:src="@drawable/ic_delete_feed"
                   android:padding="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightGrey"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Remove_Feed"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textColour"/>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</LinearLayout>